--- a/#src/styles/style.scss
+++ b/#src/styles/style.scss
@@ -26,7 +26,7 @@
 @import 'components/contact-form-7/custom';
 // @import '../libraries/animate/animate.min.css';
 @import 'components/animation';
-@import './components/lightbox.min.scss';
+@import 'components/lightbox.min.scss';
 
 
 /* Pages */
@@ -35,7 +35,7 @@
 @import 'pages/page-contacts';
 @import 'pages/page-about';
 @import 'pages/page-portfolio';
-// @import './pages/unipro.scss';
+@import 'pages/page-unipro';
 
 
 /* Main Page */
