--- a/#src/styles/style.scss
+++ b/#src/styles/style.scss
@@ -8,7 +8,7 @@
 @import 'utils/_functions';
 @import 'utils/_mixins';
 @import 'utils/_media-queries';
-@import 'utils/_fonts';
+@import 'utils/fonts';
 @import 'utils/_reset';
 // @import '../../node_modules/bootstrap/dist/css/bootstrap.min.css';
 
