--- a/#src/styles/style.scss
+++ b/#src/styles/style.scss
@@ -23,7 +23,6 @@
 @import 'components/swiper_5.3.8/swiper';
 @import 'components/contact-form-7/styles';
 @import 'components/contact-form-7/custom';
-// @import '../libraries/animate/animate.min.css';
 @import 'components/animation';
 @import 'components/lightbox.min.scss';
 
@@ -36,7 +35,7 @@
 @import 'pages/page-portfolio';
 
 // !!!!!! ОТКЛЮЧИТЬ ПЕРЕД ИНТЕГРАЦИЕЙ || ИСПОЛЬЗОВАТЬ РАЗНЫЕ ШАБЛОНЫ !!!!!!
-@import 'pages/page-unipro';
+//@import 'pages/page-unipro';
 // @import 'pages/page-doosan';
 // @import 'pages/page-liom';
 // @import 'pages/page-montegrappa';
@@ -45,7 +44,7 @@
 
 /* Media for Pages !!!!!! ОТКЛЮЧИТЬ ПЕРЕД ИНТЕГРАЦИЕЙ || ИСПОЛЬЗОВАТЬ РАЗНЫЕ ШАБЛОНЫ !!!!!! */
 /* -------------------------------------------------------------------------- */
-@import 'media/page-media-unipro';
+//@import 'media/page-media-unipro';
 // @import 'media/page-media-doosan';
 // @import 'media/page-liom-media';
 // @import 'media/page-montegrappa-media';
