--- a/#src/styles/pages/page-doosan.scss
+++ b/#src/styles/pages/page-doosan.scss
@@ -1,5 +1,5 @@
 /* --------------------------------------------------------------------------
- * >>> UNIPRO PAGE
+ * >>> Doosan PAGE
  * -------------------------------------------------------------------------- */
 .header-section{
     padding: 13px 0;
@@ -111,7 +111,7 @@
 .bl-scroll::-moz-scrollbar-thumb:vertical{height: 5px;background-color: $yellow;};
 .bl-scroll::-moz-scrollbar-thumb:horizontal{width: 5px;background-color: $yellow;};
 
-/* PAGE UNIPRO OFFER */
+/* PAGE Dooan OFFER */
 /* -------------------------------------------------------------------------- */
 .offer-section{
     position: relative;
@@ -272,7 +272,7 @@
     text-align: center;
 }
 
-/* Page Unipro About */
+/* Page Doosan About */
 /* -------------------------------------------------------------------------- */
 .about-section {
     padding-top: 80px;
@@ -360,7 +360,7 @@
     }
 }
 
-//* Page Unipro Pallete */
+//* Page Doosan Pallete */
 /* -------------------------------------------------------------------------- */
 .pallete-section {
     position: relative;
@@ -479,7 +479,7 @@
     }
 }
 
-/* SCREEN Unipro Technology */
+/* SCREEN Doosan Technology */
 /* -------------------------------------------------------------------------- */
 .technology-section {
     padding-bottom: 75px;
@@ -536,7 +536,7 @@
     }
 }
 
-/* Page Unipro Pages */
+/* Page Doosan Pages */
 /* -------------------------------------------------------------------------- */
 
 .pages-header {
@@ -593,7 +593,7 @@
     }
 }
 
-/* Page Unipro Adaptive */
+/* Page Doosan Adaptive */
 /* -------------------------------------------------------------------------- */
 .adaptive-title {
     margin-top: 40px;
@@ -695,7 +695,7 @@
     }
 }
 
-/* SCREEN Unipro Contacts */
+/* SCREEN Doosan Contacts */
 /* -------------------------------------------------------------------------- */
 .contacts-section {
     background: rgb(245, 245, 245);
@@ -745,7 +745,7 @@
 }
 
 
-/* Page Unipro Contacts Form */
+/* Page Doosan Contacts Form */
 /* -------------------------------------------------------------------------- */
 .contacts-info-title {
     font-weight: 500;
@@ -884,7 +884,7 @@
     }
 }
 
-/* Page Unipro Footer */
+/* Page Doosan Footer */
 /* -------------------------------------------------------------------------- */
 
 .footer-section {
