--- a/#src/styles/style.scss
+++ b/#src/styles/style.scss
@@ -36,20 +36,11 @@
 /* Pages Inner */
 /* -------------------------------------------------------------------------- */
 
-//@import 'pages/page-unipro';
-//@import 'pages/page-doosan';
+@import 'pages/page-unipro';
+@import 'pages/page-doosan';
+@import 'pages/page-liom';
+@import 'pages/page-montegrappa';
 
- @import 'pages/page-liom';
-// @import 'pages/page-montegrappa';
-
-
-//////////////////////////////////////////////////////////////////////////////////////
-
-
-/* Media for Pages */
-/* -------------------------------------------------------------------------- */
-// @import 'media/page-liom-media';
-// @import 'media/page-montegrappa-media';
 
 /* Main Page */
 /* -------------------------------------------------------------------------- */
