--- a/#src/styles/pages/page-liom.scss
+++ b/#src/styles/pages/page-liom.scss
@@ -1,435 +1,34 @@
 /* --------------------------------------------------------------------------
  * >>> Liom PAGE
  * -------------------------------------------------------------------------- */
-.header-section{
-    padding: 13px 0;
-    position: fixed;
-    width: 100%;
-    background: #fff;
-    z-index: 100;
-    -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=8, Direction=0, Color=#000000)";/*IE 8*/
-    -moz-box-shadow: 0 2px 8px 4px rgba(0,0,0,0.1);/*FF 3.5+*/
-    -webkit-box-shadow: 0 2px 8px 4px rgba(0,0,0,0.1);/*Saf3-4, Chrome, iOS 4.0.2-4.2, Android 2.3+*/
-    box-shadow: 0 2px 8px 4px rgba(0,0,0,0.1);/* FF3.5+, Opera 9+, Saf1+, Chrome, IE10 */
-    filter: progid:DXImageTransform.Microsoft.Shadow(Strength=8, Direction=135, Color=#000000); /*IE 5.5-7*/
-}
-
-.header-body{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.header-logo{
-    height: 100%;
-}
-
-.header-menu {
-    z-index: 2;
-    display: inline-flex;
-    align-items: center;
-    cursor: pointer;
-    font-weight: 500;
-    transition: $anim1;
-}
-
-.header-menuInfo {
-    font-size: 20px;
-    font-weight: 300;
-    margin-right: 19px;
-    cursor: pointer;
-}
-
-.header-toogleButton {
-    cursor: pointer;
-    width: 55px;
-    height: 55px;
-    padding: 0;
-    border: 0;
-    background-color: transparent;
-    position: relative;
-
-    &.menuOpen:after {
-        background-color: transparent;
-    }
-}
-
-.header-toogleButton:before {
-    width: 100%;
-    height: 1px;
-    display: block;
-    content: '';
-    background-color: #000000;
-    position: absolute;
-    top: 26px;
-    left: 0;
-    z-index: 1;
-}
-
-.header-toogleButton:after {
-    width: 1px;
-    height: 100%;
-    display: block;
-    content: '';
-    background-color: #000000;
-    position: absolute;
-    top: 0;
-    left: 27px;
-    transition: all .3s;
-}
-
-.header-hiddenMenu {
-    z-index: 1;
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100vh;
-    line-height: 110px;
-    font-weight: 300;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: #FFCC00;
-    font-size: 50px;
-
-    @include tablet-lg-up{
-        font-size: 100px;
-    }
-}
-
-.scroll-block {
-    overflow: hidden;
-}
-
-.bl-scroll::-webkit-scrollbar{width: 5px;height: 5px;};
-.bl-scroll::-webkit-scrollbar-track-piece{background-color: #fff;};
-.bl-scroll::-webkit-scrollbar-thumb:vertical{height: 5px;background-color: $yellow;};
-.bl-scroll::-webkit-scrollbar-thumb:horizontal{width: 5px;background-color: $yellow;};
-.bl-scroll::-moz-scrollbar{width: 5px;height: 5px;};
-.bl-scroll::-moz-scrollbar-track-piece{background-color: $yellow;};
-.bl-scroll::-moz-scrollbar-thumb:vertical{height: 5px;background-color: $yellow;};
-.bl-scroll::-moz-scrollbar-thumb:horizontal{width: 5px;background-color: $yellow;};
-
 /* PAGE Liom OFFER */
 /* -------------------------------------------------------------------------- */
-.offer-section{
-    position: relative;
-    padding-top: 81px;
+.liom-offer-bg{
     background: url(../images/liom/liom-mainBg.jpg) no-repeat center top / cover;
-    padding-bottom: 45px;
-    min-height: 90vh;
 }
 
-@keyframes titleAnim {
-    from { width: 0 }
-    to { width: 240px;}
-}
-@include sm-up{
-    @keyframes titleAnim {
-        from { width: 0 }
-        to { width: 320px;}
-    }
-}
-
-@include md-up{
-    @keyframes titleAnim {
-        from { width: 0 }
-        to { width: 400px; }
-    }
-}
-
-@include tablet-lg-up{
-    @keyframes titleAnim {
-        from { width: 0 }
-        to { width: 566px; }
-    }
-}
-
-@keyframes titleCaptAnim {
-    from { width: 0 }
-    to { width: 235px; }
-}
-
-@include tablet-lg-up{
-    @keyframes titleCaptAnim {
-        from { width: 0 }
-        to { width: 747px; }
-    }
-}
-
-@include xs-up{
-    @keyframes titleCaptAnim {
-        from { width: 0 }
-        to { width: 260px; }
-    }
-}
-
-@include sm-up{
-    @keyframes titleCaptAnim {
-        from { width: 0 }
-        to { width: 380px; }
-    }
-}
-
-@include md-up{
-    @keyframes titleCaptAnim {
-        from { width: 0 }
-        to { width: 460px; }
-    }
-}
-@include tablet-lg-up{
-    @keyframes titleCaptAnim {
-        from { width: 0 }
-        to { width: 747px; }
-    }
-}
-
-.offer-body{
-    padding-top: 300px;
-    padding-bottom: 155px;
-}
-
-.offer-title-top{
-    padding: 19px 20px 16px 20px;
-    background: #000;
-    width: 240px;
-    color: #fff;
-    animation: titleAnim 1s ease-in-out;
-
-    @include sm-up{
-        width: 320px;
-    }
-    @include md-up{
-        width: 400px;
-    }
-    @include tablet-lg-up{
-        width: 566px;
-    }
-}
-
-.offer-title{
-    font-size: 25px;
-
-    @include md-up{
-        font-size: 26px;
-        line-height: 1em;
-    }
-    @include tablet-lg-up{
-        font-size: 50px;
-
-    }
-}
-
-.offer-title-bottom{
-    background: $yellow;
-    width: 235px;
-    color: #000;
-    padding: 19px 20px 16px 20px;
-    min-height: 102px;
+.lm-offer-bottom{
+    max-height: 80px;
     display: flex;
     align-items: center;
-    max-height: 102px;
-    margin-left: 61px;
-    animation: titleCaptAnim 1s ease-in-out;
 
-    @include xs-up{
-        width: 260px;
-    }
     @include sm-up{
-        width: 380px;
-        max-height: 79px;
-    }
-    @include md-up{
-        width: 460px;
-        margin-left: 135px;
+        max-height: 57px;
     }
     @include tablet-lg-up{
-        width: 747px;
+        height: 94px;
         max-height: 94px;
-    }
-    @include lg-up{
-        margin-left: 255px;
-    }
-}
-
-.offer-caption{
-    @include sm-up{
-        max-height: 44px;
-    }
-    @include tablet-lg-up{
-        font-size: 20px;
-    }
-    @include tablet-lg-up{
-        max-height: none;
-    }
-}
-
-.offer-footer{
-    text-align: center;
-}
-
-/* Page Liom About */
-/* -------------------------------------------------------------------------- */
-.about-section {
-    padding-top: 80px;
-}
-
-.about-body{
-    padding-bottom: 62px;
-
-}
-
-.about-img-wrapper{
-    margin-bottom: 25px;
-}
-
-.about-title {
-    p {
-        margin-top: 30px;
-        font-size: 20px;
-    }
-}
-
-.about-title-caption{
-    font-size: 18px;
-}
-
-.about-tasks {
-    padding-bottom: 55px;
-
-    @include tablet-lg-up{
-        padding-bottom: 100px;
-    }
-    h2 {
-        font-size: 35px;
-        margin-bottom: 35px;
-
-        @include tablet-lg-up{
-            font-size: 50px;
-            margin-bottom: 50px;
-        }
-    }
-}
-
-.tasks-card {
-    display: flex;
-    margin-bottom: 30px;
-}
-
-.tasks-card-numb {
-    color: #FFCB05;
-    font-size: 50px;
-    font-weight: 700;
-    padding-top: 10px;
-    padding-left: 15px;
-}
-
-.tasks-card-title {
-    font-size: 25px;
-    margin-bottom: 10px;
-    font-weight: 500;
-    line-height: 1.2em;
-
-    @include tablet-lg-up {
-        font-size: 27px;
-        margin-bottom: 10px;
-    }
-}
-
-.task-card-about {
-    font-weight: 300;
-    font-size: 20px;
-}
-
-// Video Frame
-.about-video-frame {
-    display: block;
-    height: 300px;
-    background: #C4C4C4;
-    position: relative;
-
-    @include md-up{
-        height: 400px;
-    }
-    @include tablet-lg-up{
-        height: 690px;
     }
 }
 
 //* Page Liom Pallete */
 /* -------------------------------------------------------------------------- */
-.pallete-section {
-    position: relative;
-    padding-top: 115px;
-    padding-bottom: 100px;
 
-    @include tablet-lg-up{
-        padding-top: 237px;
-        padding-bottom: 300px;
-    }
-}
-
-.pallete-title {
-    font-size: 26px;
-    font-weight: 700;
-    line-height: 1.2em;
-    padding-bottom: 50px;
-
-    @include sm-up{
-        font-size: 35px;
-    }
-    @include tablet-lg-up{
-        font-size: 50px;
-    }
-}
-
-.pallete-bg {
-    z-index: -1;
-    position: absolute;
-    width: 66%;
-    height: 100%;
+.liom-bg {
     background: url(../images/liom/liom-palleteBg.png) no-repeat center right / contain;
-    right: 0;
-    top: 0;
-
-    @include tablet-lg-up{
-        width: 60%;
-    }
 }
 
-.pallete-color-title{
-    font-weight: 500;
-    font-size: 30px;
-}
-
-.pallete-font-title {
-    font-weight: 500;
-    margin-bottom: 15px;
-    font-size: 30px;
-}
-
-.pallete-font-caption{
-    font-size: 15px;
-}
-
-.pallete-color {
-    margin-top: 50px;
-}
-
-.color-types {
-    margin-top: 38px;
-
-    &>div {
-        margin-left: 25px;
-
-        &:first-of-type {
-            margin-left: 15px;
-        }
-    }
-}
-
-.color-typesCard {
+.pallete-lm-bg {
     display: inline-block;
     justify-content: center;
 
@@ -443,6 +42,7 @@
         box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25),
         0 0 0 6px rgba(0, 0, 0, 0.3),
         0 0 0 12px rgba(0, 0, 0, 0.1);
+        margin-bottom: 15px;
     ;
 
         &.cardCol2 {
@@ -468,90 +68,10 @@
         }
     }
 
-    p {
-        padding-top: 12px;
-        font-size: 12px;
-        color: #AFAFAF;
-    }
-}
-
-
-/* SCREEN Liom Technology */
-/* -------------------------------------------------------------------------- */
-.technology-section {
-    padding-bottom: 75px;
-}
-
-.technology-body {
-    align-items: center;
-}
-
-.technology-title {
-    font-weight: 700;
-    line-height: 1.2em;
-    font-size:  25px;
-
-    @include sm-up{
-        font-size: 35px;
-    }
-    @include tablet-lg-up{
-        font-size: 48px;
-    }
-}
-
-.technology-icons {
-    display: flex;
-    flex-wrap: wrap;
-    margin-bottom: 35px;
-
-    @include xs-up{
-        padding-left: 23px;
-    }
-    @include tablet-lg-up{
-        padding-left: 0;
-    }
-
-    &>div {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 80px;
-        width: 80px;
-        margin-top: 37px;
-        margin-right: 11px;
-    }
-}
-
-.technology-img {
-    width: 280px;
-    margin: auto;
-    @include md-up{
-        width: 400px;
-    }
-    @include tablet-lg-up{
-        margin-top: 150px;
-    }
 }
 
 /* Page Liom Pages */
 /* -------------------------------------------------------------------------- */
-
-.pages-header {
-    padding-bottom: 50px;
-}
-
-.pages-title {
-    font-size: 27px;
-    font-weight: 700;
-    line-height: 1.2em;
-
-    @include sm-up{
-        font-size: 35px;
-    }
-    @include tablet-lg-up{
-        font-size: 50px;
-    }
-}
 
 
 .pages-pR1>div:nth-child(1) {
@@ -590,352 +110,9 @@
     }
 }
 
-/* Page Liom Adaptive */
-/* -------------------------------------------------------------------------- */
-.adaptive-title {
-    margin-top: 40px;
-    font-size: 27px;
-    font-weight: 700;
-    margin-bottom: 20px;
-    line-height: 1.2em;
-
-    @include sm-up{
-        font-size: 35px;
-    }
-    @include tablet-lg-up{
-        margin-top: 0;
-        font-size: 50px;
-    }
-}
-
-.adaptive-title-caption {
-    font-size: 15px;
-    margin-bottom: 110px;
-
-    @include sm-up{
-        font-size: 18px;
-    }
-    @include tablet-lg-up{
-        font-size: 18px;
-        width: 625px;
-        font-size: 20px;
-    }
-}
-
-.adaptive-img-container {
-    max-width: 1460px;
-    padding: 0px 5%;
-    margin: 0 auto;
-    position: relative;
-    margin-bottom: 30px;
-}
-
-//.adImg-Right {
-//  right: 9px;
-//  top: 115px;
-//  height: 135px;
-//  width: 124px;
-//
-//  @include tablet-lg-up{
-//    right: 120px;
-//    top: 220px;
-//    height: 285px;
-//    width: 400px;
-//  }
-//}
-//
-//.adImg-Left {
-//  top: 0px;
-//  right: 900px;
-//  height: 385px;
-//  width: 460px;
-//}
-//
-//.adImg-Main {
-//  height: 260px;
-//  width: 320px;
-//  top: -60px;
-//  right: 10px;
-//  z-index: 1;
-//
-//  @include tablet-lg-up{
-//    height: 745px;
-//    width: 1050px;
-//    right: 250px;
-//  }
-//}
-//
-//.adImg-Bottom {
-//  width: 743px;
-//  height: 266px;
-//  top: 630px;
-//  right: 365px;
-//  z-index: 1;
-//}
-
-.adaptive-link {
-    display: flex;
-    justify-content: center;
-    font-weight: 500;
-    color: #FFCC00;
-    font-size: 30px;
-    line-height: 1.5em;
-    margin-bottom: 100px;
-
-    a {
-        cursor: pointer;
-        border-bottom: 2px solid #FFCC00;
-        transition: $anim1;
-
-        &:hover {
-            border-bottom: 2px solid transparent;
-        }
-    }
-}
-
-/* SCREEN Liom Contacts */
-/* -------------------------------------------------------------------------- */
-.contacts-section {
-    background: rgb(245, 245, 245);
-    background: linear-gradient(0deg, rgba(245, 245, 245, 1) 62%, rgba(255, 255, 255, 0) 62%);
-
-    @include tablet-lg-up{
-        background: rgb(255, 255, 255);
-        background: linear-gradient(90deg, rgba(255, 255, 255, 0) 50%, rgba(245, 245, 245, 1) 50%);
-    }
-}
-
-.contacts-info {
-    &>div {
-        span {
-            display: block;
-            font-weight: 300;
-            font-size: 20px;
-        }
-
-        a {
-            font-size: 22px;
-            line-height: 150%;
-
-            @include tablet-lg-up{
-                font-size: 27px;
-            }
-        }
-
-        &:nth-child(1) {
-            margin-top: 50px;
-        }
-
-        &:nth-child(2) {
-            margin-top: 63px;
-            margin-bottom: 101px;
-        }
-    }
-}
-
-.contacts-infoLinks {
-    transition: $anim1;
-    border-bottom: 2px solid transparent;
-
-    &:hover {
-        border-bottom: 2px solid #FFCC00;
-    }
-}
-
-
-/* Page Liom Contacts Form */
-/* -------------------------------------------------------------------------- */
-.contacts-info-title {
-    font-weight: 500;
-    margin-top: 80px;
-    margin-bottom: 22px;
-    font-size: 27px;
-    line-height: 150%;
-
-    @include tablet-lg-up{
-        font-size: 30px;
-        margin-top: 30px;
-    }
-}
-
-.contacts-info-caption {
-    margin-bottom: 57px;
-    font-size: 18px;
-
-    @include tablet-lg-up{
-        font-size: 20px;
-    }
-}
-
-.contacts-info-form {
-    @include tablet-lg-up{
-        padding-left: 100px;
-    }
-
-    .wpcf7-list-item-label {
-        font-size: 11px;
-    }
-
-    .wpcf7-form {
-        input[type="submit"] {
-            display: block;
-            width: auto;
-            height: 100%;
-            position: relative;
-            font-size: 20px;
-            background: transparent;
-            margin-bottom: 50px;
-            font-weight: 500;
-            margin-left: 40%;
-            transition: $anim1;
-
-            @include sm-up{
-                margin-left: 68%;
-            }
-            @include tablet-lg-up{
-                font-size: 25px;
-                margin-left: 60%;
-            }
-
-            &:hover {
-                color: #FFCC00;
-
-            }
-        }
-
-        input {
-            width: 100%;
-            height: 35px;
-            margin-bottom: 10px;
-            padding: 18px 16px;
-            font-size: 15px;
-        }
-
-        textarea {
-            width: 100%;
-            height: 91px;
-            resize: none;
-            margin-bottom: 17px;
-            padding: 18px 16px;
-            font-size: 15px;
-        }
-
-        label {
-            display: flex;
-            align-items: center;
-            cursor: pointer;
-
-            input {
-                width: 13px;
-                height: 13px;
-                margin-bottom: 0;
-                margin-right: 3px;
-            }
-        }
-    }
-
-    .wpcf7-checkbox input {
-        display: none;
-    }
-
-    .wpcf7-checkbox .wpcf7-list-item-label {
-        font-style: normal;
-        font-weight: 300;
-        font-size: 10px;
-        line-height: 150%;
-        color: #000000;
-        padding-left: 15px;
-        position: relative;
-        cursor: pointer;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-    }
-
-    .wpcf7-checkbox .wpcf7-list-item-label:before {
-        width: 10px;
-        height: 10px;
-        display: block;
-        content: '';
-        position: absolute;
-        top: 0;
-        left: 0;
-        border: 1px solid #000000;
-    }
-
-    .wpcf7-checkbox .wpcf7-list-item-label:after {
-        width: 10px;
-        height: 10px;
-        display: block;
-        content: '';
-        background-color: #000000;
-        position: absolute;
-        top: 0;
-        left: 0;
-        border: 1px solid #000000;
-        opacity: 0;
-    }
-
-    .wpcf7-checkbox input:checked~.wpcf7-list-item-label:after {
-        opacity: 1;
-    }
-}
-
 /* Page Liom Footer */
 /* -------------------------------------------------------------------------- */
 
-.footer-section {
-    background: url(../images/doosan/doosan-footerBg.png) no-repeat center top / cover;
-    color: #fff;
-}
-
-.footer {
-    padding-top: 33px;
-    padding-bottom: 43px;
-    h2 {
-        font-size: 25px;
-        margin-bottom: 25px;
-        @include tablet-lg-up{
-            font-size: 33px;
-        }
-    }
-}
-
-.footer-info {
-    p {
-        margin-top: 40px;
-        text-transform: uppercase;
-        font-size: 12px;
-        font-weight: 300;
-    }
-}
-
-.footerBtn {
-    display: flex;
-    justify-content: flex-end;
-    font-size: 20px;
-    margin-top: 72px;
-    text-transform: uppercase;
-    position: relative;
-    transition: $anim1;
-
-    &:hover {
-        color: #FFCC00;
-    }
-
-    &:hover::before {
-        background: #FFCC00;
-    }
-
-    &::before {
-        content: '';
-        position: absolute;
-        width: 20px;
-        height: 2px;
-        background: #fff;
-        bottom: 0;
-        right: -35px;
-        transition: $anim1;
-    }
+.liom-footer-bg {
+    background: url(../images/liom/liom-footer.png) no-repeat center top / cover;
 }
